--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,56 @@
     background-color: silver;
     color: orange;
 }
+
+
+/*header*/
+
+#header {
+    background: #333 url('../img/showcase.jpg') no-repeat center center/cover;
+    height: 92vh;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    color: white;
+}
+
+#header .container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    /*Overlay*/
+    background-color: rgba(0, 0, 0, 0.1);
+    /* this */
+}
+
+#header h1 {
+    font-size: 5rem;
+    margin: 0 5px;
+}
+
+#header p {
+    font-size: 2rem;
+}
+
+#header li a {
+    font-size: 1.5rem;
+    background-color: black;
+    color: white;
+    padding: 1.2rem 1.2rem;
+    text-decoration: none;
+}
+
+#header li a:hover {
+    background-color: orange;
+    color: white;
+}
+
+
+/*Utility class*/
+
+.text-primary {
+    color: orange;
+}
