--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@
 }
 
 #header .container {
+    position: absolute;
+    top: 65px;
+    right: 0;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -83,6 +88,26 @@
 #header li a:hover {
     background-color: orange;
     color: white;
+}
+
+
+/*History*/
+
+#history {
+    padding-top: 820px;
+}
+
+#history .items {
+    display: flex;
+    justify-content: space-between;
+}
+
+#history .items div {
+    flex: 1;
+}
+
+#history .items .image {
+    background: url('../img/photo-1.jpg') no-repeat center center/cover;
 }
 
 
