--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html,
 body {
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 #navbar {
@@ -204,6 +205,25 @@ body {
     justify-content: center;
     text-align: center;
     background-color: white;
+}
+
+
+/*Footer*/
+
+#main-footer {
+    position: relative;
+    top: -1rem;
+    height: 12vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+#main-footer .container p {
+    font-size: 1.2rem;
 }
 
 
