--- a/css/styleAbout.css
+++ b/css/styleAbout.css
@@ -1,7 +1,8 @@
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Cinzel', serif;
+    font-family: 'Amiri', serif;
 }
 
 #navbar .container {
@@ -33,14 +34,14 @@
     text-decoration: none;
 }
 
-.aboutH {
-    background-color: silver;
-    color: orange;
-}
-
 #navbar .container ul li a:hover {
     background-color: silver;
-    color: orange;
+    color: #ff9100;
+}
+
+#navbar .container .ul .aboutH {
+    background-color: silver;
+    color: #ff9100;
 }
 
 
@@ -86,7 +87,7 @@
 /*Utility class*/
 
 .text-primary {
-    color: orange;
+    color: #ff9100;
 }
 
 #guests .containerG {
@@ -109,7 +110,7 @@
     align-items: center;
     font-size: 1.5rem;
     color: white;
-    background: orange;
+    background: #ff9100;
     margin: 1rem 18rem;
     padding: 1.5rem 5rem;
     border-radius: 10px;
