--- a/css/styleContact.css
+++ b/css/styleContact.css
@@ -1,7 +1,54 @@
     * {
         margin: 0;
         padding: 0;
+        font-family: 'Cinzel', serif;
+        font-family: 'Amiri', serif;
     }
+    
+    #navbar .container {
+        height: 5.2rem;
+        align-items: center;
+        background-color: black;
+        color: white;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    #navbar .logo {
+        font-size: 1.8rem;
+        padding-left: 19rem;
+    }
+    
+    #navbar .container ul {
+        display: flex;
+        margin: 20px;
+        align-items: center;
+        list-style: none;
+        padding-right: 19rem;
+    }
+    
+    #navbar .container ul a {
+        font-size: 1.2rem;
+        padding: 2rem;
+        color: white;
+        text-decoration: none;
+    }
+    
+    #navbar .container ul li a:hover {
+        background-color: silver;
+        color: #ff9100;
+    }
+    
+    #navbar .container ul li a:hover {
+        background-color: silver;
+        color: #ff9100;
+    }
+    
+    #navbar .container .ul .contactH {
+        background-color: silver;
+        color: #ff9100;
+    }
+    /**/
     
     #contact .container {
         display: flex;
@@ -10,7 +57,7 @@
         align-items: left;
         padding-left: 19rem;
         padding-right: 19rem;
-        padding-top: 2.5rem;
+        padding-top: 1rem;
     }
     
     #contact .container h1 {
@@ -20,31 +67,32 @@
     
     #contact .container p {
         font-size: 1.4rem;
-        margin-top: 20px;
+        margin-top: 0px;
     }
     
     #contact .container label {
         font-size: 1.4rem;
-        margin-top: 20px;
-        outline: orange;
+        margin-top: 5px;
+        outline: #ff9100;
     }
     
     #contact .container input {
         width: 100%;
         height: 40px;
-        margin-top: 10px;
+        font-size: 1.2rem;
+        margin-top: 0px;
     }
     
     #contact .container input:focus,
     textarea:focus {
         outline: none !important;
-        border: 1px solid orange;
+        border: 1px solid #ff9100;
     }
     
     #contact .container textarea {
         height: 230px;
-        margin-top: 10px;
-        font-size: 1.5rem;
+        margin-top: 5px;
+        font-size: 1.2rem;
     }
     
     #contact .container li {
@@ -61,7 +109,7 @@
     }
     
     #contact li a:hover {
-        background-color: orange;
+        background-color: #ff9100;
         color: white;
     }
     /*info*/
@@ -71,16 +119,48 @@
         justify-content: center;
         align-items: center;
         flex: 1;
-        padding-top: 10rem;
+        height: 19rem;
         margin-top: 3rem;
-        background-color: black;
+        background-color: #333;
     }
     
     #info .infos div {
-        margin: 0 10rem;
+        margin: 0 9rem;
         display: flex;
+        justify-content: center;
         flex-direction: column;
         align-items: center;
         color: white;
-        padding-bottom: 20px;
+    }
+    
+    #info .infos div h2 {
+        font-size: 1.8rem;
+    }
+    
+    #info .infos div i {
+        font-size: 5rem;
+    }
+    
+    #info .infos div p {
+        font-size: 1rem;
+        padding-top: 30px;
+    }
+    
+    #main-footer {
+        position: relative;
+        height: 12vh;
+        background-color: black;
+        color: white;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+    }
+    
+    #main-footer .container p {
+        font-size: 1.2rem;
+    }
+    
+    .text-primary {
+        color: #ff9100;
     }
