--- a/css/style.css
+++ b/css/style.css
@@ -54,25 +54,19 @@ body {
 
 #header {
     background: #333 url('../img/showcase.jpg') no-repeat center center/cover;
-    height: 100vh;
+    height: 120vh;
     position: absolute;
     width: 100%;
-    left: 0;
     color: white;
 }
 
 #header .container {
-    position: absolute;
-    top: 65px;
-    right: 0;
-    bottom: 0;
-    left: 0;
     display: flex;
     flex-direction: column;
     text-align: center;
-    justify-content: center;
     align-items: center;
     height: 100%;
+    padding-top: 250px;
 }
 
 #header h1 {
@@ -110,6 +104,7 @@ body {
 }
 
 #history .items div {
+    z-index: 1;
     flex: 1;
 }
 
